# codeanalyzer-python

./: .gitignore  .pre-commit-config.yaml  .webui_secret_key  404.html  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  astro.config.mjs  index.html  neo4j-schema.drawio  package-lock.json  package.json  progress.txt  pyproject.toml  schema-uml.drawio  schema.neo4j.json  sitemap-0.xml  sitemap-index.xml  test_numpy_constraints.py
.claude/: SCHEMA_DECISIONS.md
.codeanalyzer/codeanalyzer-python/virtualenv/: pyvenv.cfg
.github/: release.yml
.github/release-announcer/: CLAUDE.md
.github/workflows/: announce-release.yml  release.yml  release_config.json
_astro/: Search.astro_astro_type_script_index_0_lang.DXQP0nMs.js  arc.BTyyZ9t0.js  architectureDiagram-3BPJPVTR.DScFG-O1.js  blockDiagram-GPEHLZMM.DOD1tvWz.js  c4Diagram-AAUBKEIU.nat2XixZ.js  channel.DScn-k6R.js  chunk-2J33WTMH.HmvIJeR8.js  chunk-4BX2VUAB.Bj_lmsp3.js  chunk-55IACEB6.DaHeeVsF.js  chunk-727SXJPM.eyChSAdB.js  chunk-AQP2D5EJ.B_aCHPyh.js  chunk-FMBD7UC4.B9yPs07s.js  chunk-ND2GUHAM.CiUMUSja.js  chunk-QZHKN3VN.BmpnJiq_.js  classDiagram-4FO5ZUOK.OncdqZO7.js  cose-bilkent-S5V4N54A.ClF2UM5N.js  dagre-BM42HDAG.7pHMEqVk.js  diagram-2AECGRRQ.MlUG08pO.js  diagram-5GNKFQAL.CKqaQ_hH.js  diagram-KO2AKTUF.4up6Ar1O.js  diagram-LMA3HP47.B9YE20Dj.js  diagram-OG6HWLK6.Gn5-3W5d.js  erDiagram-TEJ5UH35.Bl77lVs6.js  flowDiagram-I6XJVG4X.ZcEysN7M.js  ganttDiagram-6RSMTGT7.Coa5L4Se.js  gitGraphDiagram-PVQCEYII.DyQn-qRf.js  infoDiagram-5YYISTIA.JmDa7qGc.js  ishikawaDiagram-YF4QCWOH.Bq3509jq.js  journeyDiagram-JHISSGLW.D-GNXEdA.js  kanban-definition-UN3LZRKU.Pclr6b-W.js  linear.CNy4Dr2Q.js  mermaid.core.Ci_VGkOG.js  mindmap-definition-RKZ34NQL.CkDyostU.js  page.CmV2H9l1.js  pieDiagram-4H26LBE5.CucMMZF9.js  preload-helper.DK3iz7C1.js  quadrantDiagram-W4KKPZXB.SWAq4o9k.js  requirementDiagram-4Y6WPE33.R4IghZp_.js  sankeyDiagram-5OEKKPKP.BntQo72i.js  sequenceDiagram-3UESZ5HK.FEIwZiXY.js  (+8 more)
codeanalyzer/: __main__.py  core.py
codeanalyzer/analysis/: __init__.py  _pass.py  registry.py
codeanalyzer/config/: taint_config_defaults.py  taint_config_loader.py
codeanalyzer/dataflow/: __init__.py  access_paths.py  alias.py  builder.py  cfg.py  defuse.py  dominance.py  pdg.py  scc.py  sdg.py  slicing.py  summaries.py
codeanalyzer/frameworks/: _base.py
codeanalyzer/neo4j/: __init__.py  bolt.py  catalog.py  cypher.py  emit.py  project.py  rows.py  schema.py
codeanalyzer/options/: __init__.py  options.py
codeanalyzer/schema/: __init__.py  py_schema.py
codeanalyzer/semantic_analysis/: call_graph.py
codeanalyzer/semantic_analysis/codeql/: __init__.py  codeql_analysis.py  codeql_loader.py  codeql_query_runner.py  taint_query_generator.py
codeanalyzer/semantic_analysis/pycg/: __init__.py  pycg_analysis.py  pycg_exceptions.py  shard_planner.py
codeanalyzer/syntactic_analysis/: symbol_table_builder.py
codeanalyzer/utils/: logging.py  progress_bar.py
docs/: TAINT_ANALYSIS_USER_GUIDE.md
examples/: taint-config.example.yaml
extending/analysis-passes/: index.html
extending/overview/: index.html
guides/cli-usage/: index.html
guides/codeql/: index.html
guides/concepts/: index.html
guides/entrypoints/: index.html
guides/neo4j/: index.html
installing/: index.html
packaging/homebrew/: generate_formula.sh
packaging/install/: canpy-installer.sh  codeanalyzer-installer.sh
pagefind/: pagefind-entry.json  pagefind.en_3bda61df65.pf_meta
pagefind/fragment/: en_2999ea8.pf_fragment  en_2ed23cc.pf_fragment  en_341c8e3.pf_fragment  en_381787f.pf_fragment  en_584ebe2.pf_fragment  en_5d49208.pf_fragment  en_875d491.pf_fragment  en_8c402e6.pf_fragment  en_a9bec82.pf_fragment  en_c8ad244.pf_fragment  en_c99df1d.pf_fragment  en_dd2d461.pf_fragment  en_f036f4c.pf_fragment
pagefind/index/: en_4985be2.pf_index  en_e37df19.pf_index
quickstart/: index.html
reference/cli/: index.html
reference/schema/: index.html
scripts/: update_readme.py
src/codeanalyzer/: __main__.py  core.py
src/codeanalyzer/codeql/: codeql.py
src/codeanalyzer/schema/: __init__.py  py_schema.py
src/codeanalyzer/semantic_analysis/codeql/: codeql_loader.py
src/codeanalyzer/semantics/codeql/: codeql_analysis.py  codeql_query_runner.py
src/codeanalyzer/syntactic_analysis/: symbol_table_builder.py
src/codeanalyzer/syntactics/: symbol_table_builder.py
src/components/: Neo4jPropertyGraph.astro
src/content/docs/: index.mdx  installing.mdx  quickstart.mdx  what-is-codeanalyzer.mdx
src/content/docs/extending/: analysis-passes.mdx  overview.mdx
src/content/docs/guides/: cli-usage.mdx  codeql.mdx  concepts.mdx  entrypoints.mdx  neo4j.mdx
src/content/docs/reference/: cli.mdx  schema.mdx
src/test/: conftest.py  test_cli.py
test/: .gitignore  conftest.py  sample_graph_app.py  test_cli.py  test_dataflow_cfg.py  test_dataflow_cpg.py  test_dataflow_defuse.py  test_dataflow_dominance.py  test_dataflow_emission.py  test_dataflow_pdg.py  test_dataflow_scc.py  test_dataflow_sdg.py  test_dataflow_slicing.py  test_neo4j_bolt.py  test_neo4j_schema.py  test_pycg_sharding.py  test_shard_planner.py  test_taint_analysis.py
test/fixtures/single_functionalities/async_patterns/: main.py
test/fixtures/single_functionalities/class_hierarchy/: main.py
test/fixtures/single_functionalities/dataflow/: main.py  pipeline.py  state.py
test/fixtures/single_functionalities/decorators_and_hof/: main.py
test/fixtures/single_functionalities/stuff_nested_in_functions_test/: main.py
test/fixtures/taint_analysis/command_injection_app/: vulnerable.py
test/fixtures/taint_analysis/deserialization_app/: vulnerable.py
test/fixtures/taint_analysis/flask_app/: vulnerable.py
test/fixtures/taint_analysis/path_traversal_app/: vulnerable.py
test/fixtures/taint_analysis/sanitizer_app/: mixed.py  safe.py
test/fixtures/taint_analysis/sql_injection_app/: vulnerable.py
test/fixtures/taint_analysis/ssrf_app/: vulnerable.py
test/fixtures/taint_analysis/ssti_app/: vulnerable.py
test/fixtures/taint_analysis/xss_app/: vulnerable.py
what-is-codeanalyzer/: index.html
(+2 files in other folders)
