[project]
name = "codeanalyzer-python"
version = "0.1.10"
description = "Static Analysis on Python source code using Jedi, CodeQL and Treesitter."
readme = "README.md"
authors = [
    { name = "Rahul Krishna", email = "i.m.ralk@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "jedi>=0.18.0,<0.20.0",
    "msgpack>=1.0.0,<1.0.7",
    "networkx>=2.6.0,<3.2.0",
    "pandas>=1.3.0,<2.0.0",
    "numpy>=1.21.0,<1.24.0",
    "pydantic>=1.8.0,<2.0.0",
    "requests>=2.20.0,<3.0.0",
    "rich>=12.6.0,<14.0.0",
    "typer>=0.9.0,<1.0.0",
    "ray>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0"
]

[dependency-groups]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.14.0,<0.15.0",
    "pytest-cov>=2.10.0,<3.0.0",
    "pytest-pspec>=0.0.3"
]
dev = [
    "ipdb>=0.13.0,<0.14.0",
    "pre-commit>=2.9.0,<3.0.0"
]

[project.scripts]
codeanalyzer = "codeanalyzer.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeanalyzer"]
include = ["codeanalyzer/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "codeanalyzer",
    "codeanalyzer/py.typed",
    "README.md",
    "LICENSE",
    "NOTICE"
]

[tool.pytest.ini_options]
addopts = [
    "-p", "coverage",
    "--cov=codeanalyzer",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
    "--ignore=test/fixtures"
]
testpaths = ["test"]

[tool.coverage.run]
source = ["codeanalyzer"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "codeanalyzer/semantic_analysis/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = "htmlcov"
